# hey-robot

./: .gitignore  CMakeLists.txt  README.md  assistant_base.py  assistant_system.py  camera_to_environment_description.py  dvc.yaml  generate_environment.py  hey_robot.py  hey_robot_node.py  navigation_settings.py  package.xml  process_visuals.py  prompts.py  pyproject.toml  run_hey_robot.sh  speech_to_text.py  test_assistants.py
assistants/: behavior_or_task_assistant.py  code_capability_assistant.py  code_generation_assistant.py  weight_retrieval_assistant.py
launch/: hey_robot.launch  hey_robot_turtlebot.launch  hey_robot_with_planner.launch
test/: test_assistants.py
util/: reading.py  timer.py
