<?xml version="1.0"?>
<package format="2">
  <name>hey_robot</name>
  <version>0.0.1</version>
  <description>The hey_robot package</description>
  
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>mpc_planner_msgs</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>mpc_planner_msgs</exec_depend>
  
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
